feat(security): Add JwtService for token generation and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=validate
 server.port=8088
+jwt.secret-key=mySecretKeyVeryLongComplexUnbrokableForThisProject123456789
+jwt.acess-token-expiration=3600000
+jwt.refresh-token-expiration=604800000
