fix(infra): Specify Java 17 in Vercel configuration

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     { "src": "pom.xml",
       "use": "@vercel/java",
-      "config": { "serverPort": 8088 }
+      "config": {
+        "serverPort": 8088,
+        "java": { "version": 17 }
+      }
     }
   ],
     "routes": [
